client/src/styles/Header.module.scss
@use "fonts" as fonts;

.container {
  @include fonts.roboto-slab();
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

.time {
  display: block;
  margin-left: auto;
  width: max-content;
  color: var(--secondary-color);
  font-size: 0.8em;
}

.headline {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5em;
  & > span {
    display: inline-block;

    &:nth-child(1) {
      width: 3em;
      height: 3em;
    }

    &:nth-child(2) {
      @include fonts.lexend();
      font-size: 3em;
    }
  }
}

.category-nav {
  margin: 0 auto;
  width: max-content;
}

.nav-button {
  display: inline-block;
  position: relative;
  align-content: center;
  padding: 0 1em;
  height: 2em;

  &::after {
    position: absolute;
    bottom: 0;
    left: 0;
    transform: scaleX(0);
    transition: 200ms ease-in-out;
    background: var(--primary-color);
    width: 100%;
    height: 2px;
    content: "";
  }

  &:hover::after {
    transform: scaleX(0.8);
  }
}

